benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/debug/bignum_ModExp_ModExpPow2_Zeroes_iter5_error.log
=== Verification Error - Iteration 5 ===
File: benchmarks/verus/bignum/files/bignum_ModExp_ModExpPow2_Zeroes.rs
Time: 2025-09-15 10:53:05

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_ModExpPow2_Zeroes_impl.rs:29:9
   |
29 |         result as nat == Str2Int(s@),
   |         ^^^^^^ not found in this scope

error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_ModExpPow2_Zeroes_impl.rs:30:14
   |
30 |         0 <= result
   |              ^^^^^^ not found in this scope

error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_ModExpPow2_Zeroes_impl.rs:58:9
   |
58 |         result as nat == Exp_int(base as nat, Str2Int(exp_bits@)) % (modulus as nat),
   |         ^^^^^^ not found in this scope

error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_ModExpPow2_Zeroes_impl.rs:59:9
   |
59 |         result >= 0
   |         ^^^^^^ not found in this scope

error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_ModExpPow2_Zeroes_impl.rs:84:24
   |
84 |         ValidBitString(result@),
   |                        ^^^^^^ not found in this scope

error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_ModExpPow2_Zeroes_impl.rs:85:17
   |
85 |         Str2Int(result@) == n as nat
   |                 ^^^^^^ not found in this scope

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0425`.

--------------------------------------------------------------------------------

Additional Output:
error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_ModExpPow2_Zeroes_impl.rs:29:9
   |
29 |         result as nat == Str2Int(s@),
   |         ^^^^^^ not found in this scope

error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_ModExpPow2_Zeroes_impl.rs:30:14
   |
30 |         0 <= result
   |              ^^^^^^ not found in this scope

error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_ModExpPow2_Zeroes_impl.rs:58:9
   |
58 |         result as nat == Exp_int(base as nat, Str2Int(exp_bits@)) % (modulus as nat),
   |         ^^^^^^ not found in this scope

error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_ModExpPow2_Zeroes_impl.rs:59:9
   |
59 |         result >= 0
   |         ^^^^^^ not found in this scope

error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_ModExpPow2_Zeroes_impl.rs:84:24
   |
84 |         ValidBitString(result@),
   |                        ^^^^^^ not found in this scope

error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_ModExpPow2_Zeroes_impl.rs:85:17
   |
85 |         Str2Int(result@) == n as nat
   |                 ^^^^^^ not found in this scope

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0425`.
